# spec_snapshot/openapi.json
@@ -2154,6 +2154,16 @@
             },
             "description": "Successful Response"
           },
+          "413": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            },
+            "description": "Payload too large"
+          },
           "422": {
             "content": {
               "application/json": {
